tests/reference/asr-test_chr-91f4987.stderr
semantic error: 'f64' object cannot be interpreted as an integer
 --> tests/errors/test_chr.py:3:13
  |
3 |     s = chr(973.2)
  |             ^^^^^ 
